Removed duplicate readme